--- a/all_about_LargeLanguageModels.ipynb
+++ b/all_about_LargeLanguageModels.ipynb
@@ -649,9 +649,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a29d3364-93fe-448e-9868-67317d3ffcad",
+   "metadata": {},
+   "source": [
+    "## BLEU (Bilingual Evaluation Understudy) scores are commonly used in the field of natural language processing and machine translation to evaluate the quality of machine-translated text against one or more reference translations. Here are some situations where BLEU scores are typically used:\n",
+    "\n",
+    "## Machine Translation Evaluation: BLEU scores are often used to evaluate the performance of machine translation systems. By comparing the output of a machine translation system with one or more human-generated reference translations, BLEU scores provide a quantitative measure of the translation quality.\n",
+    "\n",
+    "## Algorithm Development: Researchers and practitioners use BLEU scores during the development and tuning of machine translation algorithms. By comparing the BLEU scores of different translation models or parameter settings, developers can assess the effectiveness of their approaches and make improvements.\n",
+    "\n",
+    "## Benchmarking: BLEU scores serve as a standard benchmark for comparing different machine translation systems or approaches. Researchers often report BLEU scores in academic papers to demonstrate the performance of their models and to facilitate comparison with existing methods.\n",
+    "\n",
+    "## Model Selection: BLEU scores can help in selecting the best-performing machine translation model among multiple candidate models. Higher BLEU scores generally indicate better translation quality, although it's essential to consider other factors such as computational efficiency and domain-specific requirements.\n",
+    "\n",
+    "## Automatic Evaluation: BLEU scores provide an objective and automated way to evaluate machine translation quality, which is especially useful when manual evaluation by human annotators is impractical due to time or resource constraints.\n",
+    "\n",
+    "## Overall, BLEU scores are valuable tools for assessing and comparing the quality of machine-translated text, providing researchers and practitioners with quantitative metrics to measure performance and make informed decisions during machine translation development and evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "21c60ea9-7752-4a3e-a6cc-512eb1df6f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score: 0.4854917717073234\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.translate.bleu_score import sentence_bleu\n",
+    "\n",
+    "# Example references and hypothesis\n",
+    "references = [['the', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog']]\n",
+    "hypothesis = ['the', 'fast', 'brown', 'fox', 'jumped', 'over', 'the', 'sleepy', 'dog']\n",
+    "\n",
+    "# Calculate BLEU score\n",
+    "bleu_score = sentence_bleu(references, hypothesis)\n",
+    "print(\"BLEU Score:\", bleu_score)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c60ea9-7752-4a3e-a6cc-512eb1df6f03",
+   "id": "077321fc-9af3-48ee-a1fa-bfb30750cab7",
    "metadata": {},
    "outputs": [],
    "source": []
