--- a/Fine_Tuning_LLM.ipynb
+++ b/Fine_Tuning_LLM.ipynb
@@ -1732,6 +1732,114 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "606b3660-e85f-45e6-ba12-f4db5fc08f5b",
+   "metadata": {},
+   "source": [
+    "# Performance and Scalability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "067c13f7-7dad-423b-9b5d-de826140ac40",
+   "metadata": {},
+   "source": [
+    "### Training large transformer models and deploying them to production present various challenges. During training, the model may require more GPU memory than available or exhibit slow training speed. In the deployment phase, the model can struggle to handle the required throughput in a production environment.\n",
+    "\n",
+    "### This documentation aims to assist you in overcoming these challenges and finding the optimal setting for your use-case.\n",
+    "\n",
+    "### The guides are divided into training and inference sections, as each comes with different challenges and solutions. Within each section you’ll find separate guides for different hardware configurations, such as single GPU vs. multi-GPU for training or CPU vs. GPU for inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32437b7f-4252-444d-8671-63339f6f8f51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33606b95-0cc5-4416-aeba-6156a6a7e6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ba72474-145d-4603-b3c6-69cfd1b7690f",
+   "metadata": {},
+   "source": [
+    "## Quantization\n",
+    "\n",
+    "### Quantization techniques focus on representing data with less information while also trying to not lose too much accuracy. This often means converting a data type to represent the same information with fewer bits. For example, if your model weights are stored as 32-bit floating points and they’re quantized to 16-bit floating points, this halves the model size which makes it easier to store and reduces memory-usage. Lower precision can also speedup inference because it takes less time to perform calculations with fewer bits.\n",
+    "\n",
+    "\n",
+    "### Transformers supports several quantization schemes to help you run inference with large language models (LLMs) and finetune adapters on quantized models. This guide will show you how to use Activation-aware Weight Quantization (AWQ), AutoGPTQ, and bitsandbytes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "030239ab-86e9-41c0-8834-713b81d12ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Quanto\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, QuantoConfig\n",
+    "\n",
+    "model_id = \"facebook/opt-125m\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "quantization_config = QuantoConfig(weights=\"int8\")\n",
+    "#quantized_model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"cuda:0\", quantization_config=quantization_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2eb23a1b-6cc9-4092-ba88-f18fa84ca9f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bitsandbytes\n",
+    "from transformers import AutoModelForCausalLM\n",
+    "\n",
+    "#model_8bit = AutoModelForCausalLM.from_pretrained(\"bigscience/bloom-1b7\", device_map=\"auto\", load_in_8bit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "60476898-cb53-41bb-a05e-f0a1243d6e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "\n",
+    "quantization_config = BitsAndBytesConfig(llm_int8_enable_fp32_cpu_offload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d23ffab-788c-4a82-b748-40c3239de57d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://huggingface.co/docs/transformers/en/quantization?bnb=8-bit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c026996a-832d-4558-a980-9d4b73a91a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
